UC13: Performance comparison using loop vs stream